Algunas traducciones pendientes

--- a/_includes/themes/hsmty/default.html
+++ b/_includes/themes/hsmty/default.html
@@ -165,11 +165,11 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Donation Form</h4>
+                        <h4 class="modal-title">Donaciones al Hackerspace Monterrey</h4>
                     </div>
                     <div class="modal-body">
                         <div class="form-group pricing">
-                            <h6 class="modal-subtitle">How much would  you like to donate?</h6>
+                            <h6 class="modal-subtitle">Cuanto deseas donar?</h6>
                             <div class="btn-group">
                                 <button type="button" class="btn btn-default active">$10</button>
                                 <button type="button" class="btn btn-default">$20</button>
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <h6 class="modal-subtitle">Personal Information</h6>
+                            <h6 class="modal-subtitle">Información personal requerida</h6>
                             <div class="row">
                                 <div class="col-sm-6 col-xs-12">
                                     <input type="text" id="name" placeholder="First Name">
@@ -207,7 +207,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12 col-xs-12">
-                                    <button type="button" class="btn btn-accent">Donate Now</input>
+                                    <button type="button" class="btn btn-accent">Donar ahora</input>
                                 </div>
                             </div>
                         </div>
