--- a/_includes/themes/hsmty/page.html
+++ b/_includes/themes/hsmty/page.html
@@ -1,9 +1,10 @@
+<section>
 <div class="page-header">
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
-
 <div class="row-fluid">
   <div class="span12">
     {{ content }}
   </div>
 </div>
+</section>
